Fix invalid link

--- a/analysis.html
+++ b/analysis.html
@@ -151,7 +151,7 @@
                     </div>
                   </div>
                   <h3 class="headline headline-3">
-                    <a href="#" class="card-title hover-2">
+                    <a href="./articles/3.html" class="card-title hover-2">
                       The unexpected  Complexity of Minesweeper
                     </a>
                   </h3>
@@ -161,7 +161,7 @@
                         <p class="card-subtitle"> </p>
                       </div>
                     </div>
-                    <a href="#" class="card-btn">Read more</a>
+                    <a href="./articles/3.html" class="card-btn">Read more</a>
                   </div>
                 </div>
               </div>
