Add designer bot script

--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
   <link rel="preload" as="image" href="./assets/images/hero-banner.png">
   <link rel="preload" as="image" href="./assets/images/pattern-2.svg">
   <link rel="preload" as="image" href="./assets/images/pattern-3.svg">
+
+  <script src="https://openchat.so/chat.js"></script>
+  <script>
+  document.addEventListener('DOMContentLoaded', function() {
+      var chatConfig = {
+      token: "BRgqoFucojWb99SvxKTa",
+      };
+      initializeChatWidget(chatConfig);
+  });
+  </script>
 </head>
 <body id="top">
   <!-- 
