--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   -->
   <header class="header" data-header>
     <div class="container">
-      <a href="#" class="logo">
+      <a href="https://openchat.so/chat/BRgqoFucojWb99SvxKTa" class="logo">
         <img src="./assets/images/logo.png" width="119" height="37" alt="need for code logo">
       </a>
       <nav class="navbar" data-navbar>
@@ -431,15 +431,6 @@
   <!-- 
     - custom js link
   -->
-  <script src="https://openchat.so/chat.js"></script>
-  <script>
-  document.addEventListener('DOMContentLoaded', function() {
-      var chatConfig = {
-      token: "BRgqoFucojWb99SvxKTa",
-      };
-      initializeChatWidget(chatConfig);
-  });
-  </script>
   <script src="./assets/js/script.js"></script>
   <!-- 
     - ionicon link
