--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   -->
   <header class="header" data-header>
     <div class="container">
-      <a href="https://openchat.so/chat/BRgqoFucojWb99SvxKTa" class="logo">
+      <a href="#" class="logo">
         <img src="./assets/images/logo.png" width="119" height="37" alt="need for code logo">
       </a>
       <nav class="navbar" data-navbar>
