Add article text to 3,4,5 and update index

--- a/index.html
+++ b/index.html
@@ -379,24 +379,26 @@
             <a href="#" class="logo">
               <img src="./assets/images/logo.png" width="119" height="37" loading="lazy" alt="logo">
             </a>
-            <p class="footer-text">
+            <div class="footer-brand">
+              <p>
               "Where the world ceases to be the scene of our personal hopes and wishes, 
               where we face it as free beings admiring, asking, and observing, there we enter the realm of Art and Science. 
               If what is seen and experienced is portrayed in the language of logic, we are engaged in science. 
               If it is communicated through forms whose connections are not accessible to the conscious mind but are recognized intuitively as meaningful, then we are engaged in art. 
               Common to both is the loving devotion to that which transcends personal concerns and volition."<br>
               - Albert Einstein
-            </p>
-            <div class="footer-brand">
+              </p>
+            </div>
+            <!-- <div class="footer-brand">
               <p class="footer-list-title">Address</p>
               <address class="footer-text address">
               Aachen, Germany             
             </address>
-            </div>         
+            </div>          -->
           <!--</div>-->
         </div>
         <div class="footer-bottom">
-          <ul class="social-list">
+          <ul class="social-list" >
             <li>
               <a href="https://www.linkedin.com/in/nmanjunathreddy/" class="social-link">
                 <ion-icon name="logo-linkedin"></ion-icon>
@@ -411,9 +413,6 @@
             </li>
           </ul>
           <br>
-          <p class="copyright">
-            &copy; Template by <a href="https://www.github.com/codewithsadee" class="copyright-link">codewithsadee.</a>
-          </p>
         </div>
       </div>
     </div>
