--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               I’m <span class="span">Manjunath Reddy</span>
             </h1>
             <p class="hero-text">
-              Techie. Lifelong Learner. Passionate Developer. Avid Gamer.
+              Lifelong Learner. Passionate Developer. Avid Gamer.
             </p>
           </div>
           <div class="hero-banner">
