--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <a href="#featured" class="navbar-link hover-1" data-nav-toggler>Featured</a>
           </li>
           <li>
-            <a href="./assets/pdf/6_Plus_CPP_Python_Dev.pdf" target="_blank" class="navbar-link hover-1" data-nav-toggler>Curriculum Vitae</a>
+            <a href="./assets/pdf/NMR.pdf" target="_blank" class="navbar-link hover-1" data-nav-toggler>Curriculum Vitae</a>
           </li>
         </ul>
       </nav>
